Fixes issue with missing plot data for Char_2 characters which are missing a Char_3 child, until you remove Char_3 charactertics from the plot. But this now means that Char_2 parents are showing on the plot with Char_3 children seprately, which makes it look like fatalites are counted multiple times.

--- a/Fatality Data NW/bls_fatality_fdb_ea.Rmd
+++ b/Fatality Data NW/bls_fatality_fdb_ea.Rmd
@@ -344,7 +344,7 @@ total_fatalities <- reactive ({
   minval= min(df_total$level)
   df_total = df_total[df_total$level == minval,]
   df_total= df_total %>% select_if(~sum(!is.na(.)) > 0)
-  df_total = df_total  %>% drop_na() 
+  df_total = df_total  %>% drop_na(Fatalities) 
   df_total
   })
 
