--- a/Fatality Data NW/bls_fatality_fdb_ea.Rmd
+++ b/Fatality Data NW/bls_fatality_fdb_ea.Rmd
@@ -346,11 +346,18 @@ renderPlotly({
   
   plotdata = NULL
   try({
-  plotdata = (total_fatalities())}, silent = T)
+    plotdata = (total_fatalities())
+  }, silent = T)
   
   # Check for required values
-  # req(input$char)
-  # req(input$naicsval)
+  validate(
+    need(input$naicsval != "", 
+         paste("Please use the menu to select an industry group.",
+               "Use the > symbol to navigate through levels.", sep = "\n")),
+    need(input$char != "", 
+         paste("Please use the menu to choose injury characteristics.", 
+               "Use the > symbol to navigate through levels.", sep = "\n"))
+  )
   
   # View required values
   # print(input$char)
@@ -367,7 +374,7 @@ renderPlotly({
                               color = Characteristic)) +
       geom_jitter(width = 0.2, height = 0.2) +
       facet_wrap("State", nrow = 1) +
-      geom_smooth(se = F) +
+      geom_smooth(method = 'loess', formula = 'y ~ x', se = FALSE) +
       labs(color = "Sub-Groups") +
       scale_x_continuous(breaks = integer_breaks()) +
       scale_y_continuous(breaks = integer_breaks(),
@@ -380,10 +387,12 @@ renderPlotly({
     
   } else if (length(unlist(input$naicsval)) == 0) {
     
-    p1 = ggplot() +                      # Draw ggplot2 plot with text only
+    # Draw ggplot2 plot with text only
+    p1 = ggplot() + 
       annotate("text", x = 1, y = 1, size = 4, 
         label = paste(
           "Please use the menu to select an industy group.", 
+          "Please choose injury characteristics.", 
           "Use the > symbol to navigate through levels.", sep = "\n")
       ) + theme_void()
     
